CSS changes to fix 'Welcome' section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,7 @@
 
 body {
     overflow: hidden;
-    
 }
-
 
 a:visited {
     text-decoration: none;
@@ -61,10 +59,7 @@ section {
     animation-duration: 1.5s;
     min-height: 200px;
     min-width: 300px;
-
 }
-
-
 
 @media(max-width:600px), (max-height: 600px) {
     section {
@@ -74,7 +69,7 @@ section {
         top: 0;
         align-items: center;
         z-index: 0;
-        overflow: auto;
+        overflow-x: hidden;
     }
 }
 
@@ -87,9 +82,5 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     -webkit-box-shadow: 0 0 0px 1000px #222 inset;
     transition: background-color 5000s ease-in-out 0s;
 }
-
-
-
-  
 
 /*-------End Global Stylings-------*/
